--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="CAOS alee.jpeg" alt="A imagem apresenta a capa do album mais famoso de alee, CAOS" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="CAOS.jpeg" alt="A imagem apresenta a capa do album mais famoso de alee, CAOS" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
