--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/3300622337_9ec91b500b_o.jpg"
+                        <img src="alee4.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
@@ -86,11 +86,11 @@
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/3301461990_1fb84115b5_o.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="alee5.jpeg" class="img-fluid rounded-5" loading="lazy">
                     </div>class="particles"
                     
                     <div class="col-md-4">
-                        <img src="img/3301461990_90dc9e8250_q.jpg"
+                        <img src="alee7.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
