--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <section aria-labelledby="imagem">
             <h2 id="imagem">Imagem do Artista</h2>
-            <img src="https://i.ytimg.com/vi/HFA8dF6WvXg/maxresdefault.jpg" alt="Foto do cantor Alee">
+            <img src="caos.jpeg" alt="Foto do cantor Alee">
         </section>
     </main>
 
